--- a/activmatesApp/templates/new-activity.html
+++ b/activmatesApp/templates/new-activity.html
@@ -55,7 +55,7 @@
           <div id="addressField">
             <input
               id="autocomplete"
-              placeholder="Enter your address"
+              placeholder= "{{ address_placeholder }}"
               type="text"
               class="form-control"
             />
