--- a/activmatesApp/templates/view-activity.html
+++ b/activmatesApp/templates/view-activity.html
@@ -1,34 +1,60 @@
-{% extends 'layout.html' %} {% block body %}
+{% extends 'layout.html' %} 
 
-<div class="card">
-  <div class="card-body">
-    <h5 class="card-title border-bottom">{{ activity.title }}</h5>
-    <h6 class="card-subtitle mb-2 text-muted">{{ activity.type}}</h6>
-    <p class="card-text">{{ activity.description}}</p>
-    <h6>{{ activity.address }}</h6>
-    <a
-      href="{{ url_for('users.user_activities', username=activity.profile.user.username) }}"
-      >other posts by user</a
-    >
-    {% if activity.profile.id == current_user.profile.id %}
-    <div>
-      <a
-        href="{{ url_for('posts.update_activity', activity_id=activity.id)}}"
-        class="btn-secondary btn btn-sm m-1"
-        >
-        Update
-      </a>
-      <button
-        class="btn btn-danger btn-sm"
-        data-bs-toggle="modal"
-        data-bs-target="#deleteModal"
-      >
-        Delete
-      </button>
+{% block body %}
+
+<div class="d-flex justify-content-center">
+  <div class="card  shadow w-75 m-3 bg-body rounded" >
+    <div class="card-body">
+      <div class="row">
+        <div class="col-4">
+          <img src="{{ url_for('static', filename='images/activity-pics/' + activity.image_file) }}" class="h-75" alt="">
+        </div>
+        <div class="col-8">
+          <h3 class="card-title">
+            {{ activity.title }}
+          </h3>
+          <h6 class="card-subtitle mb-2 text-muted">
+            {{ activity.activity_type.name }}
+          </h6>
+          <h6 class="card-subtitle mb-2 text-muted">
+            username: {{ activity.profile.user.username }}
+          </h6>
+          <h6 class="card-subtitle mb-2 text-muted">
+            {{ activity.address }}
+          </h6>
+          <p class="card-text">
+            {{ activity.description}}
+          </p>
+          <a
+            href="{{ url_for('posts.view_activity', activity_id=activity.id) }}"
+            class="card-link"
+            >
+            View all user activities
+          </a>
+          <a href="#" class="card-link">Contact</a>
+          {% if activity.profile.id == current_user.profile[0].id %}
+          <div class="mt-3">
+            <a
+              href="{{ url_for('posts.update_activity', activity_id=activity.id)}}"
+              class="btn-secondary btn btn-sm m-1"
+              >
+              Update
+            </a>
+            <button
+              class="btn btn-danger btn-sm"
+              data-bs-toggle="modal"
+              data-bs-target="#deleteModal"
+            >
+              Delete
+            </button>
+          </div>
+          {% endif %}
+        </div>
+      </div>
     </div>
-    {% endif %}
   </div>
 </div>
+
 
 
 
@@ -53,7 +79,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
-          Close
+          Cancel
         </button>
         <form
           action="{{ url_for('posts.delete_activity', activity_id=activity.id)}}"
