--- a/activmatesApp/templates/home.html
+++ b/activmatesApp/templates/home.html
@@ -6,10 +6,11 @@
 
 {% endblock %} 
 {% block body %}
-
-<a href="{{ url_for('main.home_list_view') }}">list view </a>  
+<div class="content-section">
 <div class="row">
+  <a href="{{ url_for('main.home_list_view') }}" class="text-decoration-none view-toggle">list view </a>  
   <div class="col-md-8">
+
     <div id="floating-panel">
       <input id="address"  type="textbox" value="Berlin, Germany" />
       <input id="submit" class="secondary" type="button" value="search" />
@@ -24,15 +25,15 @@
     <div class="activity-card shadow p-3 mb-5 bg-body rounded" hidden>
       <img id="activity-image" height="150px" width="150px" src="" alt="">
       <h2 id="title"></h2>
-        <h6 id="userName"></h6>
-        <h3 id="activityType"></h3>
-   
-      <p id="address-display"></p>
+      <h5 id="userName"></h5>
+      <h5 id="activityType"></h5>
+      <h5 id="address-display"></h5>
       <p id="description"></p>
       <a id="view-activity" href="" >View Activity</a>
     </div>
   </div>
   </div>
+</div>
 <script
   async
   src="https://maps.googleapis.com/maps/api/js?key={{ map_key }}&libraries=places&callback=initMap"
