--- a/activmatesApp/templates/create-profile.html
+++ b/activmatesApp/templates/create-profile.html
@@ -1,79 +1,88 @@
 {% extends 'layout.html' %} {% block body %}
-<h1>profile page</h1>
 <div class="row content-section">
-  {{ error }} {{ saved }} {{ address_data }}
+  {{ error }} 
+  <a class="view-toggle mb-3" href="{{ url_for('profiles.account_profile') }}" >
+    back
+  </a>
+  <div class="col"></div>
   <div class="col mt-3">
     <form action="" enctype="multipart/form-data" method="POST">
       {{ form.hidden_tag() }}
       <fieldset class="form-control d-grid gap-3">
-        <legend>Create a Profile!</legend>
-        <div class="form-group profile-picture">
-          {{ form.picture.label() }} {{ form.picture(class="form-control-label")
-          }} {% if form.picture.errors %} {% for error in form.picture.errors %}
-          <span class="text-danger">{{ error }}</span><br />
-          {% endfor %} {% endif %}
+        <legend>{{ legend }}</legend>
+        <div class="form-group">
+          {{ form.picture.label() }} 
+          {{ form.picture(class="form-control") }} 
+          {% if form.picture.errors %} 
+            {% for error in form.picture.errors %}
+              <span class="text-danger">{{ error }}</span><br />
+            {% endfor %} 
+          {% endif %}
         </div>
-        <div class="form-group first-name">
-          {{ form.first_name.label(class="form-control-label") }} {% if
-          form.first_name.errors %} {{ form.first_name(class="form-control-label
-          is-invalid", placeholder="First Name") }}
-          <div class="invalid-feedback">
-            {% for error in form.first_name.errors %}
-            <span>{{ error }}</span>
-            {% endfor %}
-          </div>
-          {% else %} {{ form.first_name(class="form-control-label",
-          placeholder="First Name") }} {% endif %}
+        <div class="form-group ">
+          {{ form.first_name.label() }} 
+          {% if form.first_name.errors %} 
+            {{ form.first_name(class="form-control is-invalid", placeholder="eg. Jane") }}
+            <div class="invalid-feedback">
+              {% for error in form.first_name.errors %}
+                <span>{{ error }}</span>
+              {% endfor %}
+            </div>
+          {% else %} 
+            {{ form.first_name(class="form-control", placeholder="eg. Jane") }} 
+          {% endif %}
         </div>
-        <div class="form-group last-name">
-          {{ form.last_name.label(class="form-control-label") }} {% if
-          form.last_name.errors %} {{ form.last_name(class="form-control-label
-          is-invalid", placeholder="Last Name") }}
-          <div class="invalid-feedback">
-            {% for error in form.last_name.errors %}
-            <span>{{ error }}</span>
-            {% endfor %}
-          </div>
-          {% else %} {{ form.last_name(class="form-control-label",
-          placeholder="Last Name") }} {% endif %}
+        <div class="form-group ">
+          {{ form.last_name.label() }} 
+          {% if form.last_name.errors %} 
+            {{ form.last_name(class="form-control is-invalid", placeholder="eg. Smith") }}
+            <div class="invalid-feedback">
+              {% for error in form.last_name.errors %}
+                <span>{{ error }}</span>
+              {% endfor %}
+            </div>
+          {% else %} 
+            {{ form.last_name(class="form-control", placeholder="eg. Smith") }} 
+          {% endif %}
         </div>
-
-        <div class="form-group phone-number">
-          {{ form.phone_number.label(class="form-control-label") }} {% if
-          form.phone_number.errors %} {{
-          form.phone_number(class="form-control-label is-invalid",
-          placeholder="Phone Number") }}
-          <div class="invalid-feedback">
-            {% for error in form.phone_number.errors %}
-            <span>{{ error }}</span>
-            {% endfor %}
-          </div>
-          {% else %} {{ form.phone_number(class="form-control-label",
-          placeholder="Phone Number") }} {% endif %}
+        <div class="form-group ">
+          {{ form.phone_number.label() }} 
+          {% if form.phone_number.errors %} 
+            {{ form.phone_number(class="form-control is-invalid", placeholder="eg.015253333333") }}
+            <div class="invalid-feedback">
+              {% for error in form.phone_number.errors %}
+                <span>{{ error }}</span>
+              {% endfor %}
+            </div>
+          {% else %} 
+            {{ form.phone_number(class="form-control", placeholder="eg.015253333333") }} 
+          {% endif %}
         </div>
-        <div class="form-group twitter">
-          {{ form.twitter.label(class="form-control-label") }} {% if
-          form.twitter.errors %} {{ form.twitter(class="form-control-label
-          is-invalid", placeholder="Twitter") }}
-          <div class="invalid-feedback">
-            {% for error in form.twitter.errors %}
-            <span>{{ error }}</span>
-            {% endfor %}
-          </div>
-          {% else %} {{ form.twitter(class="form-control-label",
-          placeholder="Twitter") }} {% endif %}
+        <div class="form-group ">
+          {{ form.facebook.label() }} 
+          {% if form.facebook.errors %} 
+            {{ form.facebook(class="form-control is-invalid", placeholder="eg. Jane Anne Smith") }}
+            <div class="invalid-feedback">
+              {% for error in form.facebook.errors %}
+                <span>{{ error }}</span>
+              {% endfor %}
+            </div>
+          {% else %} 
+            {{ form.facebook(class="form-control", placeholder="eg. Jane Anne Smith") }} 
+          {% endif %}
         </div>
-        <div class="form-group facebook">
-          {{ form.facebook.label(class="form-control-label") }} {% if
-          form.facebook.errors %} {{ form.facebook(class="form-control-label
-          is-invalid", placeholder="Facebook") }}
-          <div class="invalid-feedback">
-            {% for error in form.facebook.errors %}
-            <span>{{ error }}</span>
-            {% endfor %}
-          </div>
-          {% else %} {{ form.facebook(class="form-control-label",
-          placeholder="Facebook") }} {% endif %}
+        <div class="form-group ">
+          {{ form.twitter.label() }} 
+          {% if form.twitter.errors %} 
+            {{ form.twitter(class="form-control is-invalid", placeholder="eg. janey333") }}
+            <div class="invalid-feedback">
+              {% for error in form.twitter.errors %}
+                <span>{{ error }}</span>
+              {% endfor %}
+            </div>
+          {% else %} 
+            {{ form.twitter(class="form-control", placeholder="eg. janey333") }} 
+          {% endif %}
         </div>
         <div class="form-group">
           {{ form.submit(class="btn btn-outline-info")}}
