--- a/activmatesApp/templates/layout.html
+++ b/activmatesApp/templates/layout.html
@@ -96,7 +96,8 @@
         <div class="col"></div>
       </div>
     </div>
-    {% block body %}{% endblock %}
+    {% block body %}
+    {% endblock %}
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
