--- a/activmatesApp/templates/update-account.html
+++ b/activmatesApp/templates/update-account.html
@@ -1,35 +1,39 @@
 {% extends 'layout.html' %} {% block head %} {% endblock %} {% block body %}
-<h1>Account</h1>
+
 <div class="row content-section">
-  <div class="col">
-    <a class="nav-link" href="{{ url_for('profiles.account_profile') }}"
-      ><button class="btn info">back</button>
-    </a>
+  <a class="view-toggle mb-3" href="{{ url_for('profiles.account_profile') }}" >
+    back
+  </a>
+  <div class="col">  
     <form action="" method="POST">
       {{ form.hidden_tag() }}
       <fieldset class="form-control d-grid gap-3">
-        <legend>Account Info</legend>
+        <legend>Update Account Info</legend>
         <div class="form-group username">
-          {{ form.username.label(class="form-control-label") }} {% if
-          form.username.errors %} {{ form.username(class="form-control-label
-          is-invalid") }}
+          {{ form.username.label() }} 
+          {% if form.username.errors %} 
+            {{ form.username(class="form-control is-invalid") }}
           <div class="invalid-feedback">
             {% for error in form.username.errors %}
             <span>{{ error }}</span>
             {% endfor %}
           </div>
-          {% else %} {{ form.username(class="form-control-label") }} {% endif %}
+          {% else %} 
+            {{ form.username(class="form-control") }} 
+          {% endif %}
         </div>
         <div class="form-group email">
-          {{ form.email.label(class="form-control-label") }} {% if
-          form.email.errors %} {{ form.email(class="form-control-label
-          is-invalid") }}
+          {{ form.email.label() }} 
+          {% if form.email.errors %} 
+          {{ form.email(class="form-control is-invalid") }}
           <div class="invalid-feedback">
             {% for error in form.email.errors %}
             <span>{{ error }}</span>
             {% endfor %}
           </div>
-          {% else %} {{ form.email(class="form-control-label") }} {% endif %}
+          {% else %} 
+            {{ form.email(class="form-control") }} 
+          {% endif %}
         </div>
         <div class="form-group">
           {{ form.submit(class="btn btn-outline-info")}}
@@ -37,5 +41,6 @@
       </fieldset>
     </form>
   </div>
+  <div class="col"></div>
 </div>
 {% endblock %}
